name: haskell-cpython-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable haskell-cpython-tests
  main-is: Tests.hs
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.9
    , chell >= 0.3 && < 0.5
    , haskell-cpython
    , text
    , transformers
